<resources>
    <string name="app_name">Weather Application</string>
    <string name="txt_search_gps">Informe uma cidade brasileira e saiba a sua meterologia!</string>
    <string name="txt_hour_day">%s | %s</string>
    <string name="txt_temp">%s°C</string>
    <string name="txt_detail_weather">Detalhes da precisão do tempo</string>
    <string name="txt_sun_rise">Nascer do sol</string>
    <string name="txt_sun_down">Pôr do sol</string>
    <string name="btn_continue">Continuar</string>
    <string name="hint_city">Cidade</string>
    <string name="title_app">Previsão do tempo</string>
    <string name="error_net">Ocorreu um erro</string>
    <string name="dialog_alert">Alerta</string>
    <string name="dialog_no_weather">Não há previsão para essa localidade</string>
    <string name="ok">Ok</string>
    <string name="dialog_save_city">Deseja salvar a pesquisa?</string>
    <string name="txt_success_save">Salvo com sucesso</string>
    <string name="txt_yes">Sim</string>
    <string name="txt_no">Não</string>
    <string name="error_save">Não foi possivel gravar</string>
    <string name="error_couldnt_get">Não foi recuperar os dados</string>
</resources>