<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.weather.weatherapplication.presentation.weatherdetail.DetailWeatherViewModel" />

        <variable
            name="model"
            type="com.weather.weatherapplication.data.model.searchcity.DataModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.weatherdetail.DetailWeatherActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            android:arrowBackClick="@{viewModel::onNavigationClick}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow"
            app:navigationIconTint="@color/black">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_title_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/title_app"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>

        <View
            android:id="@+id/vw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_view"
            app:layout_constraintBottom_toBottomOf="@+id/txt_hour_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_main" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_hour_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@{model.dateTimeNow}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/vw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vw" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_search_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_detail_weather"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_hour_day" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_search_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/im_icon"
                    app:layout_constraintEnd_toEndOf="@+id/im_icon"
                    app:layout_constraintStart_toStartOf="@+id/im_icon"
                    app:layout_constraintTop_toTopOf="@+id/im_icon" />

                <ImageView
                    android:id="@+id/im_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="3dp"
                    android:imageIcon="@{model.weather.icon}"
                    android:src="@drawable/t01d"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text='@{model.temp != null ? String.format(@string/txt_temp, String.valueOf(model.temp)) : ""}'
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="70sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view"

                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="25°C" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_sun_hour"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_temp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_sun_rise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sun_rise"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/im_sun"
                    app:layout_constraintStart_toStartOf="@+id/im_sun"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/im_sun"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/c01d"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_sun_rise_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.sunrise}"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/im_sun"
                    app:layout_constraintStart_toStartOf="@+id/im_sun"
                    app:layout_constraintTop_toBottomOf="@+id/im_sun" />
            </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_sun_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sun_down"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/im_moon"
                    app:layout_constraintStart_toStartOf="@+id/im_moon"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/im_moon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="3dp"
                    android:src="@drawable/c01n"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_sun_down_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.sunset}"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/im_moon"
                    app:layout_constraintStart_toStartOf="@+id/im_moon"
                    app:layout_constraintTop_toBottomOf="@+id/im_moon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_info_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_sun_hour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>